# Predictor-Premier-League

./: .dockerignore  .env.example  .git_out.txt  .gitignore  01_preparar_datos.py  02_entrenar_modelo.py  03_entrenar_con_cuotas.py  03_entrenar_sin_cuotas.py  04_analizar_feature_importance.py  AUDIT_CHANGES.md  AUDIT_IMPROVEMENT_PLAN.md  AUDIT_ML_REPORT.md  AUDIT_RESULTS_ANALYSIS.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile.api  HF_README.md  INTERFACE_SETUP.md  QUICK_START.md  README.md  TESTING.md  WINDOWS_SETUP.md  agregar_features_derivadas.py  app.py  asd.py  asd3.py  asd4.py  config.py  docker-compose.yml  null  package-lock.json  predecir_jornada_completa.py  push_out.txt  pyproject.toml  pytest.ini  render.yaml  requeriments-api.txt  requirements.txt  resultados_pesos_optimos.csv  sistema_expected_value.py  (+4 more)
.claude/: settings.local.json
.streamlit/: config.toml
PredictorPL/: README.md  README_APP.md  app.py  app_demo.py  app_simplificado.py  requeriments.txt
api/: config.py  main.py  odds_service.py  routers.py  schemas.py
archive/: 01_preparar_datos.backup_with_h2h.py  02_entrenar_modelo.backup_with_h2h.py  xx_entrenar_con_calibracion.py
backup/: 03_entrenar_con_cuotas_legacy.py  analisis_rapido.py  analizar_features.py  diagnostico_xgb.py  experimento_xgb.py  experimento_xgb2.py  experimento_xgb3.py  extraer_mejores_params.py  fast_search2.py  optimizar_rapido.py  optimizar_rf_25feat.py  optimizar_xgb_25feat.py  optimizar_xgb_27feat.py  optimizar_xgb_84feat.py  optimizar_xgb_rapido.py
core/: __init__.py  clv_tracker.py  models.py  predictor.py  (+2 more)
(+233 files in other folders)
